--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,38 +1,37 @@
-@use '../src/styles/variables' as *;
+@use "variables" as *;
 
 .card-value {
-
   color: $text-prim;
 
   .value {
     color: white;
-    font-size: 14px;
+    font-size: $font-14;
     font-weight: 700;
   }
 }
 
 .card-label {
-    text-align: center;
+  text-align: center;
 }
 
 .vehicle-tag {
-  border-radius: 6px;
-  border: 1px solid $prim-shade-2;
-  padding: 0 4px;
+  border-radius: $space-6;
+  border: $space-1 solid $prim-shade-2;
+  padding: 0 $space-4;
   color: $prim-shade-2;
-  font-size: 13px;
+  font-size: $font-13;
 }
 
 .bolt {
-   box-shadow: 0 0 10px 0 $success;
+  box-shadow: 0 0 $space-10 0 $success;
 }
 
 ::ng-deep .p-button-outlined.p-button-contrast {
   flex-direction: row-reverse;
-  padding: 5px;
+  padding: $space-5;
   color: $text-prim;
-  border: 1px solid $prim-shade;
-  font-size: 14px;
+  border: $space-1 solid $prim-shade;
+  font-size: $font-14;
 }
 
 ::ng-deep .p-inputtext {
@@ -40,39 +39,11 @@
 }
 
 .export-btn {
-   ::ng-deep .p-button {
-     background-color: $btn-prim-bkg;
-     border-color: $btn-prim-bkg;
-     box-shadow: 0 1px 1px 0 #02001799;
-     color: $text-prim;
-     font-size: 14px;
-   }
+  ::ng-deep .p-button {
+    background-color: $btn-prim-bkg;
+    border-color: $btn-prim-bkg;
+    box-shadow: 0 $space-1 $space-1 0 #02001799;
+    color: $text-prim;
+    font-size: $font-14;
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
