--- a/src/app/modules/dashboard/components/metric-card/metric-card.component.scss
+++ b/src/app/modules/dashboard/components/metric-card/metric-card.component.scss
@@ -1,25 +1,25 @@
-@use "../../../../../src/styles/variables" as *;
+@use "variables" as *;
 
 ::ng-deep .metric-card.p-card {
   width: 100%;
   height: 100%;
   background-color: rgba($primary-bg, var(--bg-opacity)) !important;
   color: $text-light !important;
-  font-size: 12px;
-  line-height: 14px;
-  border-radius: 15px;
+  font-size: $font-12;
+  line-height: $space-14;
+  border-radius: $space-15;
 }
 
 .metric-card {
   .card-value {
     color: $text-prim;
-    font-size: 12px;
-    line-height: 14px;
+    font-size: $font-12;
+    line-height: $space-14;
     vertical-align: bottom;
     color: $text-prim;
 
     .value {
-      font-size: 14px;
+      font-size: $font-14;
       font-weight: 700;
     }
   }
@@ -31,13 +31,13 @@
   ::ng-deep {
     .p-knob {
       svg {
-        width: 80px !important;
-        height: 80px !important;
+        width: $space-80 !important;
+        height: $space-80 !important;
       }
     }
 
     .p-card-body {
-      padding: 15px !important;
+      padding: $space-15 !important;
       height: 100%;
       justify-content: center;
     }
@@ -45,7 +45,7 @@
     .p-card-content {
       display: flex;
       flex-direction: column;
-      gap: 16px;
+      gap: $space-16;
       align-items: center;
       justify-content: center;
     }
@@ -56,7 +56,7 @@
     }
 
     .p-knob-text {
-      font-size: 18px !important;
+      font-size: $font-18 !important;
       font-weight: bold;
       fill: $primary-tint;
     }
