--- a/src/app/modules/organization/invoice/invoice.component.scss
+++ b/src/app/modules/organization/invoice/invoice.component.scss
@@ -1,12 +1,12 @@
-@use "../../../../src/styles/variables" as *;
+@use "variables" as *;
 
 div {
   height: 100vh;
   width: 100%;
-  padding: 30px;
+  padding: $space-30;
 
   .pi {
-    font-size: 70px;
+    font-size: $font-70;
     color: $text-sec;
   }
 }
