--- a/src/app/modules/organization/users/add-user/add-user.component.html
+++ b/src/app/modules/organization/users/add-user/add-user.component.html
@@ -1,6 +1,9 @@
 <div class="header d-flex align-items-center justify-content-between">
   <div class="d-flex align-items-center gap-30">
-    <i class="pi pi-arrow-left"></i>
+    <div class="back" [routerLink]="['/organization/users/list']">
+      <i class="pi pi-arrow-left"></i>
+    </div>
+
     <div class="d-flex flex-column gap-5">
       <label class="title">Add User</label>
       <label>Organization</label>
@@ -183,7 +186,6 @@
       <p-select
         [options]="roles"
         formControlName="role"
-        optionLabel="name"
         placeholder="Select a Role"
         class="w-full md:w-56"
       />
@@ -201,7 +203,6 @@
       <p-select
         [options]="departments"
         formControlName="department"
-        optionLabel="name"
         placeholder="Select a Department"
         class="w-full md:w-56"
       />
