--- a/src/app/modules/organization/users/add-user/add-user.component.scss
+++ b/src/app/modules/organization/users/add-user/add-user.component.scss
@@ -1,26 +1,30 @@
-@use "../../../../../src/styles/variables" as *;
+@use "variables" as *;
 
 .header {
-  border-bottom: 1px solid $borders;
-  padding-bottom: 15px;
+  border-bottom: $space-1 solid $borders;
+  padding-bottom: $space-15;
   color: $text-prim;
-  font-size: 14px;
+  font-size: $font-14;
   .title {
     font-weight: 700;
+  }
+
+  .back {
+    cursor: pointer;
   }
 }
 
 .user-img {
-  border-radius: 15px;
+  border-radius: $space-15;
 }
 
 .form {
-  padding: 30px;
+  padding: $space-30;
 
   .field-label {
     color: $text-light !important;
-    font-size: 13px;
-    line-height: 21px;
+    font-size: $font-13;
+    line-height: $space-21;
   }
 
   .field-label.required {
@@ -31,47 +35,53 @@
     }
   }
 
-  ::ng-deep .p-inputtext,
-  .p-select {
-    background-color: $primary-bg !important;
-    border-radius: 10px !important;
-    padding: 13px 8px;
-    padding-left: 15px;
-    border-color: $primary-bg !important;
-    color: $text-prim !important;
-    font-size: 14px;
-  }
+  ::ng-deep {
+    .p-inputtext {
+      background-color: transparent !important;
+    }
 
-  ::ng-deep .p-select-label {
-    padding: 0;
-    font-size: 14px;
-  }
+    .p-inputtext,
+    .p-select {
+      background-color: $primary-bg !important;
+      border-radius: $space-10 !important;
+      padding: $space-13 $space-8;
+      padding-left: $space-15;
+      border-color: $primary-bg !important;
+      color: $text-prim !important;
+      font-size: $font-14;
+    }
 
-  ::ng-deep p-iconfield .p-inputtext {
-    padding-left: 40px;
-  }
+    .p-select-label {
+      padding: 0;
+      font-size: $font-14;
+    }
 
-  ::ng-deep .p-button {
-    border-radius: 10px;
-    padding: 10px 15px;
-    padding-left: 0;
-    background-color: $primary-contrast;
-    border-color: $primary-contrast;
-    color: $text-prim !important;
-    font-size: 14px;
-    box-shadow: 0 1px 1px 0 #02001799;
-  }
+    p-iconfield .p-inputtext {
+      padding-left: $space-40;
+    }
 
-  ::ng-deep .p-button .pi {
-    font-size: 16px;
-    padding: 12px;
+    .p-button {
+      border-radius: $space-10;
+      padding: $space-10 $space-15;
+      padding-left: 0;
+      background-color: $primary-contrast;
+      border-color: $primary-contrast;
+      color: $text-prim !important;
+      font-size: $font-14;
+      box-shadow: 0 $space-1 $space-1 0 #02001799;
+    }
+
+    .p-button .pi {
+      font-size: $font-16;
+      padding: $space-12;
+    }
   }
 
   small {
     color: $Danger;
-    font-size: 12px;
+    font-size: $font-12;
     font-weight: 400;
-    padding: 0 5px;
+    padding: 0 $space-5;
   }
 }
 
@@ -84,15 +94,15 @@
 .form-container {
   max-width: 653px;
   width: 100%;
-  margin-top: 60px;
+  margin-top: $space-60;
 }
 
 .cancel-btn {
   ::ng-deep .p-button-text {
     background-color: transparent !important;
     border-color: transparent !important;
-    padding: 10px 16px;
-    font-size: 14px;
+    padding: $space-10 $space-16;
+    font-size: $font-14;
     color: $btn-prim-text;
   }
 
@@ -103,16 +113,16 @@
 
 .save-btn {
   ::ng-deep .p-button {
-    border-radius: 10px;
+    border-radius: $space-10;
     background-color: $Com-success-2 !important;
     border-color: $Com-success-2 !important;
-    padding: 10px 15px;
-    font-size: 14px;
+    padding: $space-10 $space-15;
+    font-size: $font-14;
     color: $btn-prim-text-click-focus;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: $screen-md) {
   .form {
     padding-left: 0;
     padding-right: 0;
