handle sub items & interceptor & loading & primary btn & cancel btn

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <p-toast />
 
+<p-blockUI [blocked]="isLoading | async">
+  <div class="my-spinner-container">
+    <p-progressSpinner styleClass="my-spinner"></p-progressSpinner>
+  </div>
+</p-blockUI>
+
 <router-outlet></router-outlet>
