--- a/src/app/modules/organization/users/add-user/add-user.component.html
+++ b/src/app/modules/organization/users/add-user/add-user.component.html
@@ -14,13 +14,13 @@
       label="Cancel"
       variant="text"
       icon="pi pi-times"
-      class="cancel-btn"
+      class="btn-cancel"
       (onClick)="cancel()"
     />
     <p-button
       label="Save"
       icon="pi pi-check"
-      class="save-btn"
+      class="btn-primary"
       (onClick)="submit()"
     />
   </div>
