--- a/src/app/modules/organization/users/users-list/users-list.component.html
+++ b/src/app/modules/organization/users/users-list/users-list.component.html
@@ -10,7 +10,7 @@
     <p-button
       label="Add User"
       icon="pi pi-plus"
-      class="save-btn"
+      class="btn-primary"
       [routerLink]="['/organization/users/add']"
     />
   </div>
