handle exports &b fix loading

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <p-toast />
 
-<p-blockUI [blocked]="isLoading | async">
+<p-blockUI [blocked]="isLoading">
   <div class="my-spinner-container">
     <p-progressSpinner styleClass="my-spinner"></p-progressSpinner>
   </div>
