--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -20,6 +20,7 @@
         [showSearchAndActions]="!!first"
         stateKey="shift-history-one"
         [searchControl]="searchControl"
+        (onExportData)="reloadShifts()"
       ></app-shifts-history>
 
       <hr *ngIf="!last" class="divider" />
