--- a/src/app/modules/organization/users/pages/users-list/users-list.component.html
+++ b/src/app/modules/organization/users/pages/users-list/users-list.component.html
@@ -22,6 +22,6 @@
     [columns]="columns"
     [globalFilterFields]="globalFilterFields"
     [dataKey]="dataKey"
-    [showSearchAndActions]="true"
+    [showImport]="false"
   ></app-data-table>
 </div>
