--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,5 +8,5 @@
 .my-spinner {
   width: 50px;
   height: 50px;
-  color: var(--primary-color); // Or customize your own color
+  color: var(--primary-color);
 }
