fix table order & cache key

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -23,7 +23,7 @@
       <app-shifts-history
         [shift]="shift"
         [showSearchAndActions]="!!first"
-        stateKey="shift-history-one"
+        [stateKey]="'shift-history-' + shift.id"
         [searchControl]="searchControl"
         [preventDefaultExport]="true"
         (onExportData)="exportMultipleShifts()"
