--- a/src/app/modules/organization/users/pages/users-list/users-list.component.html
+++ b/src/app/modules/organization/users/pages/users-list/users-list.component.html
@@ -23,5 +23,6 @@
     [globalFilterFields]="globalFilterFields"
     [dataKey]="dataKey"
     [showImport]="false"
+    stateKey="users"
   ></app-data-table>
 </div>
